fix: scrollbar excess padding on firefox for .content-page

--- a/src/assets/scss/moz.scss
+++ b/src/assets/scss/moz.scss
@@ -3,7 +3,7 @@
 @-moz-document url-prefix() {
   #acontent {
     margin-right: calc(-1rem + 1px);
-    padding-right: 1.25rem;
+    padding-right: 1rem;
   }
 
   // applies to playlist list page
